--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,6 +448,10 @@ section .container {
   margin-bottom: 0;
 }
 
+li::marker {
+  color: #fff;
+}
+
 /*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
@@ -709,6 +713,7 @@ section .container {
 }
 
 .services .icon-box .icon {
+  text-align: center;
   margin: 0 auto;
   width: 64px;
   height: 64px;
